Added relevant files and more features

--- a/src/main/resources/web/locales/de_DE/translation.json
+++ b/src/main/resources/web/locales/de_DE/translation.json
@@ -35,6 +35,10 @@
       "submit": "Melde dich von deinem Account ab"
     }
   },
+  "fileView": {
+    "title": "Dateivorschau",
+    "subTitle": "Du siehst den Inhalt der Datei"
+  },
   "settings": {
     "title": "Einstellungen",
     "subTitle": "Passen Sie die Webseite an Ihre Bedürfnisse an",
